Update to latest upstream release

--- a/.abf.yml
+++ b/.abf.yml
@@ -1,2 +1,2 @@
 sources:
-  "ws-commons-util-1.0.1-src.tar.gz:"	4bd1c9825072159506e9f447dcfdfa162b4410d2
+  ws-commons-util-1.0.1-src.tar.gz: 4bd1c9825072159506e9f447dcfdfa162b4410d2
